# advent_of_code_2020

./: Cargo.toml
day_1/: Cargo.toml
day_1/benches/: numbers2.rs
day_1/src/: lib.rs  main.rs
day_2/: Cargo.toml
day_2/benches/: day2.rs
day_2/src/: lib.rs  main.rs
day_3/: Cargo.toml
day_3/benches/: day3.rs
day_3/src/: lib.rs  main.rs
day_4/: Cargo.toml
day_4/benches/: day4.rs
day_4/src/: lib.rs  main.rs
day_5/: Cargo.toml
day_5/benches/: day5.rs
day_5/src/: identities.rs  lib.rs  main.rs  seat.rs
day_6/: Cargo.toml
day_6/benches/: day6.rs
day_6/src/: lib.rs  main.rs  part_1.rs  part_2.rs
