[package]
name = "day_3"
version = "0.1.0"
authors = ["Joshua Salzedo <joshuasalzedo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"

[dependencies.day_1]
path = "../day_1"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "day3"
harness = false